# eltor-app

./: .dockerignore  .env.example  .env.sample  .gitignore  Dockerfile  docker-compose.yml  electron-builder.yml  electron.vite.config.ts  forge.config.ts  package-lock.json  package.json  pnpm-lock.yaml  readme.md  shell.nix  tsconfig.json  webpack.rules.ts
.github/workflows/: build-arm.yml  build-linux-arm.yml  build-linux.yml  build.yml
backend/: .gitignore  Cargo.toml  readme.md  run.sh
backend/src/: arti.rs  debug_info.rs  eltor.rs  ip.rs  lib.rs  lightning.rs  main.rs  paths.rs  ports.rs  socks.rs  state.rs  static_files.rs  torrc_parser.rs  wallet.rs
backend/src/routes/: debug.rs  eltor.rs  ip.rs  mod.rs  phoenix.rs  wallet.rs
docs/: PERFORMANCE_FIX.md  centralized-path-management.md
electron/: .eslintrc.js  .npmrc  components.json  package.json  pnpm-lock.yaml  tsconfig.json
electron/scripts/linux/: relay.sh  torrc_relay.tmpl
electron/scripts/mac/: tor  torrc-eltor-proxy  torrc-tor-proxy  uninstall.sh
electron/scripts/python/: readme.md
electron/src/main/wallets/: index.ts
electron/src/renderer/: routes.tsx  theme.ts
electron/src/renderer/components/Map/: MapComponent.css  MapComponent.tsx
electron/src/renderer/drivers/wallets/coreLightning/: api.ts
electron/src/renderer/drivers/wallets/phoenixd/: api.ts
electron/src/renderer/features/wallet/: Wallet.tsx  walletStore.ts
electron/src/renderer/features/wallet/WalletPlugins/: WalletPlugins.tsx
electron/src/renderer/screens/: Connect.tsx  Relay.tsx  WalletPage.tsx
electron/src/renderer/utils/: index.ts
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  MantineWrapper.tsx  Test.tsx  config.ts  globalStore.tsx  globals.css  hooks.ts  layout.tsx  main.tsx  routes.tsx  store.ts  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/scripts/: before-build.sh
frontend/src-tauri/src/: app_paths.rs  lib.rs  main.rs
frontend/src/components/: ChannelBalanceLine.tsx  CopyableTextBox.tsx  LogViewer.tsx  SocksProxyHelp.tsx
frontend/src/components/Map/: MapComponent.tsx
frontend/src/drivers/: IWallet.ts
frontend/src/drivers/wallets/lndk/: api.ts
frontend/src/drivers/wallets/phoenixd/: api.ts
frontend/src/drivers/wallets/strike/: api.ts
frontend/src/features/wallet/: Transactions.tsx  Wallet.tsx  WalletConfigModal.tsx  walletStore.ts
frontend/src/features/wallet/WalletPlugins/: WalletBox.module.css  WalletBox.tsx  WalletPlugins.tsx
frontend/src/features/wizard/: Wizard.tsx
frontend/src/hooks/: useBootstrapping.ts  useEltord.ts  useGlobalLogStream.ts
frontend/src/screens/: Connect.css  Connect.tsx  Relay.tsx  WalletPage.tsx
frontend/src/services/: apiService.ts  logStreamService.ts  torTelnetService.ts  walletApiService.ts
frontend/src/utils/: index.ts  platform.ts
scripts/: download-arti.sh  download-eltord.sh  exports.sh  start.sh
scripts/linux/: install.sh  relay.sh  torrc  torrc_relay.tmpl  uninstall.sh
scripts/mac/: haproxy.cfg  install.sh  relay.sh  torrc  torrc-eltor-proxy  uninstall.sh
src/: App.tsx  Home.tsx  globals.css  globals.d.ts  index.css  index.html  index.ts  preload.ts  renderer.ts
src/assets/: eltor-logo-512.icns
src/components/: Nav.tsx
src/main/: eventEmitter.ts  index.ts
src/main/tor/: circuitBuildWatcher.ts  circuitRenewWatcher.ts  fetchRelayInfo.ts  startTor.ts  stopTor.ts  utils.ts
src/main/wallets/: index.ts
src/pages/: Connect.tsx  Home.tsx  Relay.tsx  Router.tsx  Wallet.tsx
src/preload/: index.ts
src/renderer/: globalStore.tsx  globals.css  globals.module.css  index.html  index.tsx  layout.tsx  routes.tsx  store.ts  theme.ts
src/renderer/assets/: convert.sh  eltor-logo-2.icns
src/renderer/components/: ChannelBalanceLine.tsx  Circle.tsx  CopyableTextBox.tsx
src/renderer/components/Map/: MapComponent.css  MapComponent.tsx
src/renderer/drivers/: IWallet.ts
src/renderer/drivers/wallets/coreLightning/: api.ts
src/renderer/drivers/wallets/lndk/: api.ts
src/renderer/drivers/wallets/phoenix/: api.ts
src/renderer/drivers/wallets/phoenixd/: api.ts
src/renderer/features/eltord/: readme.md
src/renderer/features/wallet/: Transactions.tsx  Wallet.tsx  walletSlice.ts  walletStore.ts
src/renderer/features/wallet/WalletPlugins/: WalletBox.module.css  WalletBox.tsx  WalletPlugins.tsx
src/renderer/screens/: Connect.tsx  Relay.tsx  Wallet.tsx  WalletPage.tsx
src/renderer/services/: LocalStorage.tsx  torTelnetService.ts
src/renderer/utils/: index.ts
src/renderer/wallets/lndk/: api.ts
src/renderer/wallets/phoenix/: api.ts
src/services/: LocalStorage.tsx
src/types/: eltor.d.ts
src/wallets/: IWallet.ts
src/wallets/coreLightning/: api.ts
