[package]
name = "eltor-backend"
version = "0.0.15"
edition = "2021"

[lib]
name = "eltor_backend"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
dirs = "5.0"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
lni = { git = "https://github.com/lightning-node-interface/lni.git", rev="0f36a410e0109498909d032bc444f5805df06254"}
# lni = { path = "../../lni/crates/lni" }
uuid = { version = "1.0", features = ["v4"] }
ip2location = "0.5"
#eltor = { git = "https://github.com/el-tor/eltord.git", rev = "519a431431a1361e9775adb1e71158420ce1ec2b" }
eltor = { path = "../../eltord" }
env_logger = "0.11"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
zip = "0.6"