[package]
name = "eltor-app"
version = "0.1.0"
description = "eltor-app"
authors = ["eltordev"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0"
tokio = { version = "1", features = ["full"] }
tauri-plugin-log = "2.0.0" 
dirs = "5.0.0"
chrono = { version = "0.4", features = ["serde"] }
# Import the backend as a local dependency
eltor-backend = { path = "../../backend" }



